# macro

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt  run.py
config/: default.yaml
results/Two-Layer Single-Auction/: Stage-01.html  Stage-02.html
src/: anomaly.py  auction.py  consensus.py  glideslope.py  ifmea.py  initializations.py  mirror.py
src/macro/: __init__.py  agent.py  algoCompare.py  auction.py  benchmark.py  benchmark_cases.txt  glideslope.py  graph.py  ifmea.py  main.py  maneuvers.py  mirror.py  neighbors.py  simulate.py  utils.py
tests/: test_main.py
